--- a/TP1/Projet Louis/TP_AUTORADIO/TP_AUTORADIO.ioc
+++ b/TP1/Projet Louis/TP_AUTORADIO/TP_AUTORADIO.ioc
@@ -23,8 +23,9 @@ Dma.SAI2_B.1.PeriphDataAlignment=DMA_PDATAALIGN_HALFWORD
 Dma.SAI2_B.1.PeriphInc=DMA_PINC_DISABLE
 Dma.SAI2_B.1.Priority=DMA_PRIORITY_LOW
 Dma.SAI2_B.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
-FREERTOS.IPParameters=Tasks01
+FREERTOS.IPParameters=Tasks01,configTOTAL_HEAP_SIZE
 FREERTOS.Tasks01=defaultTask,0,128,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL
+FREERTOS.configTOTAL_HEAP_SIZE=10000
 File.Version=6
 I2C2.IPParameters=Timing
 I2C2.Timing=0x10D19CE4
@@ -198,7 +199,7 @@ ProjectManager.ProjectFileName=TP_AUTORADIO.ioc
 ProjectManager.ProjectName=TP_AUTORADIO
 ProjectManager.ProjectStructure=
 ProjectManager.RegisterCallBack=
-ProjectManager.StackSize=0x400
+ProjectManager.StackSize=0x1000
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
